--- a/app/src/main/res/layout/activity_atur_part_keluar.xml
+++ b/app/src/main/res/layout/activity_atur_part_keluar.xml
@@ -42,9 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/paddingMedium"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingStart="@dimen/paddingMedium"
-                    android:paddingEnd="@dimen/paddingMedium">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView07"
@@ -79,9 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/paddingMedium"
                     android:layout_marginBottom="@dimen/paddingMedium"
-                    android:orientation="horizontal"
-                    android:paddingStart="@dimen/paddingMedium"
-                    android:paddingEnd="@dimen/paddingMedium">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView5"
@@ -131,9 +127,7 @@
                     android:layout_marginTop="@dimen/paddingMedium"
                     android:layout_marginBottom="@dimen/paddingMedium"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingStart="@dimen/paddingMedium"
-                    android:paddingEnd="@dimen/paddingMedium">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView8"
