--- a/app/src/main/res/layout/activity_checkin1_.xml
+++ b/app/src/main/res/layout/activity_checkin1_.xml
@@ -293,7 +293,6 @@
 
                 </RelativeLayout>
 
-
             </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -353,7 +352,7 @@
                 app:srcCompat="@drawable/barcode"
                 android:layout_marginEnd="5dp"
                 android:backgroundTint="@color/transparent"
-                tools:ignore="RtlHardcoded,UnusedAttribute" />
+                tools:ignore="ContentDescription,RtlHardcoded,UnusedAttribute" />
 
         </FrameLayout>
 
