--- a/app/src/main/res/layout/activity_pengisian_part_keluar_.xml
+++ b/app/src/main/res/layout/activity_pengisian_part_keluar_.xml
@@ -28,7 +28,6 @@
                     android:id="@+id/et_stock_partKeluar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="STOCK"
                     android:textSize="14sp"
                     android:enabled="false" />
 
@@ -41,15 +40,53 @@
                 android:layout_marginTop="5dp">
 
                 <EditText
-                    android:id="@+id/et_jumlah_partKeluar"
+                    android:id="@+id/et_no_folder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="JUMLAH MINTA"
+                    android:hint="NO. FOLDER"
                     android:textSize="14sp"
-                    android:inputType="number"
-                    android:maxLines="1" />
+                    android:enabled="false" />
 
             </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tl_jumlah_part"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:errorEnabled="true">
+
+                    <EditText
+                        android:id="@+id/et_jumlah_partKeluar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:inputType="number"
+                        android:maxLines="1" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/img_scan_barcode"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="right|center_vertical"
+                    android:padding="5dp"
+                    app:srcCompat="@drawable/barcode"
+                    android:layout_marginEnd="5dp"
+                    android:backgroundTint="@color/transparent"
+                    tools:ignore="RtlHardcoded,UnusedAttribute" />
+
+
+            </LinearLayout>
+
 
             <include layout="@layout/layout_btn_simpan_hapus" />
 
