--- a/app/src/main/res/layout/activity_stock_opname.xml
+++ b/app/src/main/res/layout/activity_stock_opname.xml
@@ -17,8 +17,6 @@
 
             <include layout="@layout/toolbar" />
 
-
-
         </FrameLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -31,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:orientation="vertical">
 
@@ -89,28 +87,38 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/border_solid"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+
+                android:layout_marginBottom="@dimen/paddingMedium"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView35"
-                    android:layout_width="150dp"
+                    android:id="@+id/txttittle9"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="LOKASI" />
+                    android:layout_weight="3"
+                    android:text="LOKASI"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
-                <Spinner
-                    android:id="@+id/sp_lokasi_stockOpname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:entries="@array/lokasi_penempatan_part" />
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_lokasi_stockOpname"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </RelativeLayout>
+
 
             </LinearLayout>
-
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -130,24 +138,50 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center">
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/paddingMedium">
 
-                <EditText
-                    android:id="@+id/et_jumlahdata_stockOpname"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:enabled="false"
-                    android:hint="JUMLAH DATA"
-                    android:textSize="14sp" />
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="5dp">
 
-            </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/et_stock"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:enabled="false"
+                        android:hint="STOCK"
+                        android:textSize="14sp" />
 
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/et_pending"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:enabled="false"
+                        android:hint="PENDING"
+                        android:textSize="14sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,15 +190,16 @@
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:textAlignment="center">
 
                 <EditText
                     android:id="@+id/et_jumlahakhir_stockOpname"
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:hint="STOCK"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="JUMLAH PART"
                     android:inputType="number"
                     android:maxLength="10"
                     android:textSize="14sp" />
@@ -172,29 +207,21 @@
             </android.support.design.widget.TextInputLayout>
 
 
-            <ImageView
-                android:id="@+id/imgBarcode_stockOpname"
+            <ImageButton
+                android:id="@+id/img_scan_barcode"
                 android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
+                android:layout_height="50dp"
+                android:layout_gravity="right|center_vertical"
                 android:padding="5dp"
-                android:src="@drawable/scan"
-                android:tint="@color/colorPrimary" />
+                app:srcCompat="@drawable/barcode"
+                android:layout_marginEnd="5dp"
+                android:backgroundTint="@color/transparent"
+                tools:ignore="ContentDescription,RtlHardcoded,UnusedAttribute" />
+
 
         </LinearLayout>
 
-
-
-            <Button
-                android:id="@+id/btn_simpan_stockOpname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/btn_rounded_accent"
-                android:text="SIMPAN"
-                android:textColor="@android:color/white" />
-
+            <include layout="@layout/layout_btn_simpan_hapus"/>
 
         </LinearLayout>
 
