--- a/app/src/main/res/layout/find_jenisken.xml
+++ b/app/src/main/res/layout/find_jenisken.xml
@@ -52,26 +52,8 @@
                         android:textColor="@color/grey_80"
                         android:textStyle="bold"
                         android:layout_weight="1"
-                        android:layout_gravity="start"/>
-
-                    <TextView
-                        android:id="@+id/txtVarian"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:maxLines="2"
-                        android:text="VARIAN"
-                        android:layout_weight="1"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                        android:textColor="@color/grey_80"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top"
-                    android:orientation="horizontal">
+                        android:layout_gravity="start"
+                        android:visibility="gone"/>
 
                     <TextView
                         android:id="@+id/txtMerk"
@@ -85,6 +67,26 @@
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:id="@+id/txtVarian"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:text="VARIAN"
+                        android:layout_weight="1"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/grey_80"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/txtModel"
                         android:layout_width="150dp"
@@ -94,7 +96,8 @@
                         android:text="MODEL"
                         android:textColor="@color/grey_80"
                         android:textStyle="bold"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
