--- a/app/src/main/res/layout/item_daftar_cari_part.xml
+++ b/app/src/main/res/layout/item_daftar_cari_part.xml
@@ -15,79 +15,96 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="2dp">
 
-    <TableLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:padding="10dp"
-        android:stretchColumns="*">
+        android:layout_height="match_parent">
 
-        <!--            <ImageView-->
-        <!--                android:id="@+id/img_cariPart"-->
-        <!--                android:layout_margin="5dp"-->
-        <!--                android:layout_width="50dp"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:layout_height="50dp"-->
-        <!--                app:srcCompat="@drawable/ic_shopping_basket"/>-->
+        <ImageButton
+            android:id="@+id/img_delete"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end"
+            android:background="@android:color/transparent"
+            android:tint="@color/grey_80"
+            app:srcCompat="@drawable/ic_close"
+            android:visibility="gone"
+            card_view:ignore="ContentDescription" />
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="10dp"
+            android:stretchColumns="*">
+
+            <!--            <ImageView-->
+            <!--                android:id="@+id/img_cariPart"-->
+            <!--                android:layout_margin="5dp"-->
+            <!--                android:layout_width="50dp"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:layout_height="50dp"-->
+            <!--                app:srcCompat="@drawable/ic_shopping_basket"/>-->
 
 
-        <TableRow>
+            <TableRow>
 
-            <TextView
-                android:id="@+id/tv_cari_namaPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:text="Nama Part"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />
+                <TextView
+                    android:id="@+id/tv_cari_namaPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Nama Part"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />
 
-        </TableRow>
+            </TableRow>
 
-        <TableRow android:layout_marginTop="5dp">
+            <TableRow android:layout_marginTop="5dp">
 
-            <TextView
-                android:id="@+id/tv_cari_noPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No Part"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_gravity="start"/>
+                <TextView
+                    android:id="@+id/tv_cari_noPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Part"
+                    android:layout_gravity="start"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_cari_merkPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Merk Part"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_gravity="end"/>
+                <TextView
+                    android:id="@+id/tv_cari_merkPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Merk Part"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-        </TableRow>
+            </TableRow>
 
-        <TableRow android:layout_marginTop="5dp">
+            <TableRow android:layout_marginTop="5dp">
 
-            <TextView
-                android:id="@+id/tv_cari_stockPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:text="Stock"
-                android:layout_gravity="start"/>
+                <TextView
+                    android:id="@+id/tv_cari_stockPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Stock"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_cari_pending"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:text="Pending"
-                android:layout_gravity="end"/>
+                <TextView
+                    android:id="@+id/tv_cari_pending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:text="Pending"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="12sp" />
 
-        </TableRow>
+            </TableRow>
 
-    </TableLayout>
+        </TableLayout>
+
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
