--- a/app/src/main/res/layout/item_total_jual_part.xml
+++ b/app/src/main/res/layout/item_total_jual_part.xml
@@ -13,90 +13,106 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="2dp">
 
-    <TableLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:stretchColumns="*">
+        android:layout_height="match_parent">
 
-        <TableRow>
+        <ImageButton
+            android:id="@+id/img_delete"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="end"
+            android:background="@android:color/transparent"
+            android:tint="@color/grey_80"
+            app:srcCompat="@drawable/ic_close" />
 
-            <TextView
-                android:id="@+id/tv_noPart_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No. Part"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="@color/grey_80"
-                android:layout_gravity="start"
-                android:textSize="12sp" />
 
-        </TableRow>
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:stretchColumns="*">
 
-        <TableRow android:layout_marginTop="5dp">
+            <TableRow>
 
-            <TextView
-                android:id="@+id/tv_namaPart_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="2"
-                android:text="Nama Part"
-                android:layout_gravity="start"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/grey_80"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/tv_noPart_jualPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="No. Part"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_80"
+                    android:textSize="12sp" />
 
-        </TableRow>
+            </TableRow>
 
-        <TableRow android:layout_marginTop="@dimen/spacing_medium">
+            <TableRow android:layout_marginTop="5dp">
 
-            <TextView
-                android:id="@+id/tv_harga_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Harga"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/grey_80"
-                android:layout_gravity="start"
+                <TextView
+                    android:id="@+id/tv_namaPart_jualPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:maxLines="2"
+                    android:text="Nama Part"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/grey_80"
+                    android:textSize="12sp" />
 
-                android:textSize="12sp" />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/tv_jumlah_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Jumlah"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/grey_80"
-                android:textSize="12sp" />
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-        </TableRow>
+                <TextView
+                    android:id="@+id/tv_harga_jualPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Harga"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/grey_80"
 
-        <TableRow android:layout_marginTop="@dimen/spacing_medium">
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_disc_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Discount"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/grey_80"
-                android:layout_gravity="start"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/tv_jumlah_jualPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Jumlah"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/grey_80"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_total_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Total"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/grey_80"
-                android:textSize="12sp" />
+            </TableRow>
 
-        </TableRow>
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
-    </TableLayout>
+                <TextView
+                    android:id="@+id/tv_disc_jualPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Discount"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/grey_80"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_total_jualPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Total"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/grey_80"
+                    android:textSize="12sp" />
+
+            </TableRow>
+
+        </TableLayout>
+
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
