--- a/app/src/main/res/layout/activity_penyesuain.xml
+++ b/app/src/main/res/layout/activity_penyesuain.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".modules.sparepart.lokasi_part.Penyesuain_Activity">
+    tools:context=".modules.sparepart.stock_opname.Penyesuain_Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,13 +18,11 @@
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <include layout="@layout/toolbar" />
-
 
             </FrameLayout>
 
@@ -37,152 +35,118 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/txttittle9"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/border_solid"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:padding="13dp">
+                    android:layout_weight="3"
+                    android:text="SEBAB PENYESUAIN"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/textView20"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="SEBAB PENYESUAIN" />
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
 
                     <Spinner
-                        android:id="@+id/sp_penyesuaian"
-                        android:layout_width="160dp"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/sp_sebab_penyesuaian"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:entries="@array/sebab_penyesuaian"
                         android:textAlignment="center" />
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/border_solid"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+                </RelativeLayout>
 
-                    <TextView
-                        android:id="@+id/textView35"
-                        android:layout_width="150dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:text="LOKASI" />
+            </LinearLayout>
 
-                    <Spinner
-                        android:id="@+id/sp_lokasi_penyesuaian"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:entries="@array/lokasi_penyesuaian" />
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                </LinearLayout>
-
-                <LinearLayout
+                <EditText
+                    android:id="@+id/et_no_folder_lain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/border_solid"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:padding="13dp">
+                    android:hint="NO. FOLDER LAIN"
+                    android:inputType="textCapWords"
+                    android:singleLine="true"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/textView21"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="NO. FOLDER LAIN" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <Spinner
-                        android:id="@+id/sp_noFolder_penyesuaian"
-                        android:layout_width="160dp"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center" />
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
-                </LinearLayout>
+                <EditText
+                    android:id="@+id/et_ket_penyesuaian"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top|left"
+                    android:hint="KETERANGAN"
+                    android:inputType="textCapSentences|textMultiLine"
+                    android:maxLines="10"
+                    android:textSize="14sp"
+                    tools:ignore="RtlHardcoded" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:textAlignment="center">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/et_ket_penyesuaian"
+                    <EditText
+                        android:id="@+id/et_user_saksi_penyesuaian"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="top|left"
-                        android:hint="KETERANGAN"
-                        android:inputType="textCapSentences|textMultiLine"
-                        android:maxLines="10"
+                        android:layout_height="match_parent"
+                        android:hint="USER SAKSI"
+                        android:maxLength="10"
+                        android:singleLine="true"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
 
-                    <android.support.design.widget.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center">
-
-                        <EditText
-                            android:id="@+id/et_userSaksi_penyesuaian"
-                            android:layout_width="280dp"
-                            android:layout_height="wrap_content"
-                            android:hint="USER SAKSI"
-                            android:enabled="false"
-                            android:maxLength="10"
-                            android:textSize="14sp" />
-
-                    </android.support.design.widget.TextInputLayout>
-
-
-                    <ImageView
-                        android:id="@+id/imgBarcode_penyesuaian"
-                        android:layout_width="50dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="15dp"
-                        android:padding="5dp"
-                        android:src="@drawable/scan"
-                        android:tint="@color/colorPrimary" />
-
-                </LinearLayout>
-
-
+                <ImageButton
+                    android:id="@+id/img_scan_barcode"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_marginEnd="5dp"
+                    android:backgroundTint="@color/transparent"
+                    android:padding="5dp"
+                    app:srcCompat="@drawable/barcode"
+                    tools:ignore="ContentDescription,RtlHardcoded,UnusedAttribute" />
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_simpan_penyesuaian"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/btn_rounded_accent"
-                android:text="SIMPAN"
-                android:textColor="@android:color/white" />
-
         </LinearLayout>
+
+        <include layout="@layout/layout_btn_simpan_hapus" />
 
     </LinearLayout>
 
