--- a/app/src/main/res/layout/item_daftar_cari_part.xml
+++ b/app/src/main/res/layout/item_daftar_cari_part.xml
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="end"
-                    android:text="Pending"
+                    android:text=""
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textSize="12sp" />
 
