--- a/app/src/main/res/layout/mycode_inf_user.xml
+++ b/app/src/main/res/layout/mycode_inf_user.xml
@@ -53,6 +53,7 @@
         android:visibility="invisible" />
 
     <View
+        android:id="@+id/view_mycode"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_gravity="bottom"
