--- a/app/src/main/res/layout/mycode.xml
+++ b/app/src/main/res/layout/mycode.xml
@@ -37,6 +37,16 @@
                     android:layout_centerInParent="true"
                     android:scaleType="centerCrop" />
             </RelativeLayout>
+
+            <View
+                android:id="@+id/view_mycode"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@android:color/darker_gray" />
+
         </LinearLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
